--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -42,3 +42,9 @@ tr:hover {
     transform: scale(1.05);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
+/*
+.bg-white{
+    max-height: 600px;
+    max-width: 600px;
+
+}*/
